--- a/pages/opiniones.html
+++ b/pages/opiniones.html
@@ -53,10 +53,8 @@
         </div>
     
         <main class="formulario">
-            <div class="for">
-                <div>
+            <form class="for">
                     <div class="opinion"><h1>Dejanos tu opinion</h1></div>
-                        <action="">
                     <div class="item">
                         <label for="name"><strong>*Nombre:</strong></label>
                         <input type="text" name="name">
@@ -95,8 +93,7 @@
                     <div class="saludo">
                         <h3><strong>Muchas gracias por su opinion.</strong></h3>
                     </div>
-                </div>
-            </div>
+              </form>
                     <div class="img" >
                         <img class="personal" data-aos="flip-up" src="../imagenes/como-ser-un-buen-camarero.jpg" alt="mecera">
                         <img class="personal" data-aos="flip-up" src="../imagenes/tortas,opiniones.jpg" alt="mostrador">
@@ -118,7 +115,7 @@
             <h3>🐾☕ | 2024 | RoDo Cafe | Villa Urquiza C.A.B.A. | ☕🐾</h3>
           </div>
           <div class="icono">
-              <img class="icono1" src="../logo/android-chrome-512x512.png" alt="">
+              <img class="icono1" src="../logo/android-chrome-512x512.png" alt="logo">
           </div>
         </footer>
     
