--- a/pages/promo.html
+++ b/pages/promo.html
@@ -56,7 +56,7 @@
         <main class="lista_combos">
             <div class="titulo_combo"><h2><strong>Nuestros Combos</strong></h2></div>
             <div class="tabla">
-              <table class="table table-striped">
+              <table class="table">
                 <thead>
                   <tr>
                     <th scope="col">Combos</th>
